src/test/ui/liveness/liveness-assign/liveness-assign-imm-local-with-init.ast.stderr
error[E0384]: cannot assign twice to immutable variable `v`
  --> $DIR/liveness-assign-imm-local-with-init.rs:10:5
   |
LL |     let v: isize = 1; //[ast]~ NOTE first assignment
   |         - first assignment to `v`
...
LL |     v = 2; //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
